# SpotifyPy_gato365

./: LICENSE  README.md  __init__.py  album_functions  album_functions.py  artist_functions.py  authorize.py  constants.py  pyproject.toml  setup.py
spotipy_gato365.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
